crates/core/tests/snapshots/setting_default_test__setting_default__handles_layers.snap
---
source: crates/core/tests/setting_default_test.rs
expression: pretty(container.impl_partial_default_values())
---
fn default_values(
    context: &Self::Context,
) -> std::result::Result<Option<Self>, schematic::ConfigError> {
    Ok(
        Some(Self {
            b: Some(Default::default()),
            c: Some(Default::default()),
            e: Some(Vec::default()),
            ..Default::default()
        }),
    )
}
