crates/core/tests/snapshots/setting_default_test__setting_default__handles_layers_with_defaults.snap
---
source: crates/core/tests/setting_default_test.rs
expression: pretty(container.impl_partial_default_values())
---
fn default_values(
    context: &Self::Context,
) -> std::result::Result<Option<Self>, schematic::ConfigError> {
    use schematic::internal::*;
    Ok(
        Some(Self {
            a: Some(Box::new(10)),
            b: Some(Arc::new(Some(10))),
            c: Some(vec![1, 2, 3]),
            d: Some(Arc::new(vec![1, 2, 3])),
            e: Some(Box::new(handle_default_result(String::try_from("abc"))?)),
        }),
    )
}
