crates/core/tests/snapshots/setting_default_test__setting_default__handles_nested_layers.snap
---
source: crates/core/tests/setting_default_test.rs
expression: pretty(container.impl_partial_default_values())
---
fn default_values(
    context: &Self::Context,
) -> std::result::Result<Option<Self>, schematic::ConfigError> {
    Ok(
        Some(Self {
            a: PartialNestedConfig::default_values(context)?
                .map(|inner| Box::new(inner)),
            b: PartialCustomConfig::default_values(context)?
                .map(|inner| Arc::new(inner)),
            c: Some(Vec::default()),
        }),
    )
}
