crates/core/tests/snapshots/setting_default_test__setting_default__handles_optional_with_defaults.snap
---
source: crates/core/tests/setting_default_test.rs
expression: pretty(container.impl_partial_default_values())
---
fn default_values(
    context: &Self::Context,
) -> std::result::Result<Option<Self>, schematic::ConfigError> {
    use schematic::internal::*;
    Ok(
        Some(Self {
            a: Some(10),
            b: Some(10),
            c: Some(vec![1, 2]),
            d: Some(handle_default_result(String::try_from("abc"))?),
            ..Default::default()
        }),
    )
}
