crates/core/tests/snapshots/setting_default_test__setting_default__supports_handler_func.snap
---
source: crates/core/tests/setting_default_test.rs
expression: pretty(container.impl_partial_default_values())
---
fn default_values(
    context: &Self::Context,
) -> std::result::Result<Option<Self>, schematic::ConfigError> {
    use schematic::internal::*;
    Ok(
        Some(Self {
            a: handle_default_result(handler(context))?,
        }),
    )
}
