crates/core/tests/snapshots/setting_default_test__setting_default__supports_struct_literals.snap
---
source: crates/core/tests/setting_default_test.rs
expression: pretty(container.impl_partial_default_values())
---
fn default_values(
    context: &Self::Context,
) -> std::result::Result<Option<Self>, schematic::ConfigError> {
    Ok(
        Some(Self {
            a: Some(Point { x: 1, y: 2 }),
            b: Some(Wrapper {
                inner: Point { x: 0, y: 0 },
            }),
        }),
    )
}
