crates/core/tests/snapshots/setting_default_test__setting_default__supports_value_paths.snap
---
source: crates/core/tests/setting_default_test.rs
expression: pretty(container.impl_partial_default_values())
---
fn default_values(
    context: &Self::Context,
) -> std::result::Result<Option<Self>, schematic::ConfigError> {
    Ok(
        Some(Self {
            a: Some(LevelFilter::Debug),
            b: Some(MAX),
            c: Some(limits::MAX),
            d: Some(Point::ORIGIN),
        }),
    )
}
