crates/core/tests/snapshots/setting_default_test__setting_default__wraps_value_paths_in_layers.snap
---
source: crates/core/tests/setting_default_test.rs
expression: pretty(container.impl_partial_default_values())
---
fn default_values(
    context: &Self::Context,
) -> std::result::Result<Option<Self>, schematic::ConfigError> {
    Ok(
        Some(Self {
            a: Some(LevelFilter::Debug),
            b: Some(LevelFilter::Debug),
            c: Some(vec![LevelFilter::Debug]),
        }),
    )
}
